--- a/LR_Asthma_disease.ipynb
+++ b/LR_Asthma_disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "9                  0              1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "[5760 rows x 19 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -727,27 +727,6 @@
      "text": [
       "(5760, 16) (5760,)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0        0\n",
-       "3        0\n",
-       "6        0\n",
-       "9        1\n",
-       "24       0\n",
-       "        ..\n",
-       "31665    1\n",
-       "31668    0\n",
-       "31671    0\n",
-       "31674    0\n",
-       "31677    1\n",
-       "Name: Severity_None, Length: 5760, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -759,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +754,7 @@
        "5760"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,14 +778,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc ->  75.78125 %\n"
+      "Acc ->  75.34722222222221 %\n"
      ]
     }
    ],
