--- a/LR_Asthma_disease.ipynb
+++ b/LR_Asthma_disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "9                  0              1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "[5760 rows x 19 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,34 +718,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5760, 16) (5760,)\n"
+      "(5760, 15) (5760,)\n"
      ]
     }
    ],
    "source": [
     "# Non_dupDF.columns\n",
-    "X = Non_dupDF.drop(['Severity_None','Severity_Mild','Severity_Moderate'],axis=1)\n",
+    "X = Non_dupDF.drop(['Severity_None','Severity_Mild','Severity_Moderate','Gender_Male'],axis=1)\n",
     "y = Non_dupDF['Severity_None']\n",
     "print(X.shape, y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4608, 16) (1152, 16)\n"
+      "(4608, 15) (1152, 15)\n"
      ]
     },
     {
@@ -754,7 +754,7 @@
        "5760"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,14 +778,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc ->  75.34722222222221 %\n"
+      "Acc ->  75.17361111111111 %\n"
      ]
     }
    ],
