--- a/LR_Asthma_disease.ipynb
+++ b/LR_Asthma_disease.ipynb
@@ -856,18 +856,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mean_absolute_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[173], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mae \u001b[38;5;241m=\u001b[39m \u001b[43mmean_absolute_error\u001b[49m(y_test, y_pred)\n\u001b[0;32m      2\u001b[0m mse \u001b[38;5;241m=\u001b[39m mean_squared_error(y_test, y_pred)\n\u001b[0;32m      3\u001b[0m rmse \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(mse)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mean_absolute_error' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mae =>  0.22916666666666666\n",
+      "mse =>  0.22916666666666666\n",
+      "rmse =>  0.47871355387816905\n"
      ]
     }
    ],
