--- a/LR_Asthma_disease.ipynb
+++ b/LR_Asthma_disease.ipynb
@@ -731,7 +731,7 @@
    ],
    "source": [
     "# Non_dupDF.columns\n",
-    "X = Non_dupDF.drop(['Severity_None','Severity_Mild','Severity_Moderate','Gender_Male'],axis=1)\n",
+    "X = Non_dupDF.drop(['Severity_None','Severity_Mild','Severity_Moderate','Gender_Male',],axis=1)\n",
     "y = Non_dupDF['Severity_None']\n",
     "print(X.shape, y.shape)"
    ]
