--- a/KMC_Asthma_disease.ipynb
+++ b/KMC_Asthma_disease.ipynb
@@ -1480,10 +1480,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5294.543043618403 -1380.0581245661078\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_acc = km.score(X_train,y_train)\n",
+    "test_acc = km.score(X_test,y_test)\n",
+    "print(train_acc, test_acc)"
+   ]
   }
  ],
  "metadata": {
